Correcting font alignment

--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,9 @@ p {
 hr {
     height: 3px;
 }
+
+/* footer section */
+
+footer {
+    text-align: center;
+}
